# data-analyst

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.beads/: issues.jsonl
apps/api/: README.md
apps/api/app/: main.py
apps/api/app/config/: settings.py
apps/api/app/models/: db.py  schemas.py
apps/api/app/routes/: agent.py  artifacts.py  datasets.py  projects.py  runs.py
apps/api/app/services/: agent.py  agent_legacy.py  db.py  store.py
apps/api/tests/: conftest.py  test_api.py
apps/web/: .gitignore  README.md  package-lock.json
apps/web/src/: app.d.ts
apps/web/src/lib/components/: AgentChatSidebar.svelte  AgentChatTracePanel.svelte  AgentRunsCard.svelte  AgentSkillsCard.svelte  DatasetDetailCard.svelte  DatasetsCard.svelte  ProjectsCard.svelte  ReportsCard.svelte  RunsCard.svelte
apps/web/src/routes/: +page.svelte
docs/: README.md  llm-agent-roadmap.md
scripts/: agent_hardening_eval.py  agent_iterate_command.py  e2e_agent_autonomy_eval.py  e2e_agent_autonomy_eval_hard.py  e2e_agent_autonomy_eval_long.py  e2e_agent_autonomy_eval_real.py  e2e_agent_autonomy_eval_ultra.py  e2e_agent_eval.py  e2e_agent_eval_chat.py  e2e_agent_tool_usage_debug.py  test_structured_outputs.py
